openshift/07-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minfin-frontend
  labels:
    app: minfin-frontend
spec:
  selector:
    app: minfin-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
