openshift/05-backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minfin-backend
  labels:
    app: minfin-backend
spec:
  host: minfin-backend-portal-redes-minfin.apps.ocp4.mfpweb.local
  to:
    kind: Service
    name: minfin-backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
