openshift/08-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minfin-frontend
  labels:
    app: minfin-frontend
spec:
  # Este host debe coincidir con CORS_ORIGIN en 02-backend-configmap.yaml.
  host: minfin-frontend-portal-redes-minfin.apps.ocp4.mfpweb.local
  to:
    kind: Service
    name: minfin-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
